responsive and openImg

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body onload="render()">
     <h1 class="headline">Deine Fotogalerie</h1>
-    <div class="alles">
+    <div id="all" class="alles">
       <div class="nav">
         <a href="#">Neuste</a>
         <a href="#">Album</a>
