--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
       <div class="complete">
         <div class="container">
           <h2>September</h2>
+          <div class="spacer"></div>
           <div class="imgcontainer" id="imgcontainer"></div>
         </div>
-        <h2>Oktober</h2>
-        <div class="imgcontainer" id="imgcontainer2"></div>
+        <div class="container">
+          <h2>Oktober</h2>
+          <div class="spacer"></div>
+          <div class="imgcontainer" id="imgcontainer2"></div>
+        </div>
       </div>
     </div>
 
